# django_tabler_icons

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
src/tabler_icons/: __init__.py  cli.py  utils.py
src/tabler_icons/management/commands/: download_icons.py
src/tabler_icons/templatetags/: tabler_icons.py
tests/: settings.py  templatetags_test.py  test_icons.py  test_utils.py
