[metadata]
name = django_tabler_icons
version = 0.1.0
description = Use tabler icons with django templates
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/demestav/django_tabler_icons
author = Demetris Stavrou
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    django>=3.0
python_requires = >=3.7
package_dir =
    =src

[options.packages.find]
where = src

[flake8]
max-line-length = 88
